dotnet-api-k8s-ingress/site.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-deployment
  labels: 
    app: site
    system: backend
spec:
  replicas: 1
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: site
      system: backend
  template: 
    metadata:
      labels:
        app: site
        system: backend
    spec:
      containers:
      - name: dotnet-mvc-backend-k8s
        image: sourcewalker/dotnet-mvc-k8s:firsttry
        ports:
        - containerPort: 80
