dotnet-api-k8s-ingress/api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-backend-service
  labels: 
    app: api
    system: backend
spec:
  type: ClusterIP
  selector:
    app: api
    system: backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
  selector:
    app: api
    system: backend
