dotnet-api-k8s-ingress/site.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-service
  labels: 
    app: site
    system: backend
spec:
  type: ClusterIP
  selector:
    app: site
    system: backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
