dotnet-api-k8s-ingress/app.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: api-backend-service
          servicePort: 80
      - path: /
        backend:
          serviceName: site-service
          servicePort: 80
